[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "penguins_data_lab"
version = "0.1.0"
description = "Mini data lab on Palmer Penguins."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  "scikit-learn"
]

[tool.hatch.build.targets.wheel]
# <-- This must be STRINGS for your src/ layout
packages = ["src/penguins_data_lab"]
